# Team-7---Multimodal-Accessibility

./: README.md  dockerfile  projection.py  testbed.py
SENSE - Literature Review/: Existing accesibility options in popular visualization libraries.md  Haptic Feedback APIs of Android and IOS.md  How do blind people use computers?.md  SENSE Literature Review.md
SENSE - Literature Review/.obsidian/: workspace.json
experiments/: app.py  experiment_designer.ipynb  horizontal_gaps_vs_spatial.ipynb  hrtf_vs_pitch.ipynb  hrtf_vs_pitch_sonifier.py  requirements.txt  scatter_designer.ipynb  spatial_questions.json  unsupervised.ipynb
experiments/pages/: common.py  contribute.py  db.py  final.py  headphones.py  hrtf_selection.py  questions.py  sonification_utils.py
experiments/scatter_data/: 0.json  1.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  2.json  21.json  22.json  23.json  24.json  25.json  26.json  27.json  28.json  29.json  3.json  30.json  31.json  32.json  33.json  36.json  37.json  (+7 more)
ideation/: framework.md
toph/: .flake8  .gitignore  .pre-commit-config.yaml  AUTHORS  CONTRIBUTE.md  LICENSE.md  pyproject.toml
toph/examples/: chains_and_tracks.py  linear_axis.py  plot_api.py  simple.py  simple_panner.py  spatial_audio.py
toph/tests/: test_dist_models.py
toph/tests/axis/: test_spatial.py
toph/toph/: __init__.py  audio__.py  exceptions.py  plots.py  plots__.py
toph/toph/audio/: distance.py  effect.py  playable.py  spatial.py  stage.py  utils.py
toph/toph/axes/: __init__.py  base.py
toph/toph/axis/: base.py  spatial.py
